.........T [ZBX-6832] improved default templates (e.g., split "Template App Agentless" into 12 templates for each service) (asaveljevs, neogan, Sasha)
..F....... [ZBXNEXT-1851] hid American English, Greek and Polish translations from the frontend (Richlv)

Bug fixes:
..F....... [ZBX-7280] fixed map background in IE10 (Eduard)
..F....... [ZBX-7276] fixed count of displaying hosts in proxy list (Eduard)
..F....PS. [ZBX-7299] fixed dashboard widget drag'n'drop not working on PHP setups without JSON (Pavels)
.......PS. [ZBX-7292] fixed resolving of macros in host interfaces (Sasha)
...G....S. [ZBX-7061] fixed warnings produced by clang static analyzer (e.g., Linux agent crash for item system.swap.in[sda3]) (wiper)
..F....... [ZBX-7161] fixed full clone form not saving data after an unsuccessful submit (Pavels)
..F....... [ZBX-7161] fixed the clone button in the host configuration form (Pavels)
..F....... [ZBX-6528] fixed highlighting unmonitored hosts in Host inventory page (Ivo)
A.F....... [ZBX-7259] fixed "Show lines" field in Configuration > Screen > cell element to be a value between 1 and 100 (Ivo)
..F....... [ZBX-7286] fixed displaying double quotes as HTML entities in trigger menu pop-ups (Ivo)
..F....... [ZBX-7284] fixed incorrect permissions when selecting a screen element from pop-up in screens and slideshow pages (Ivo)
.......PS. [ZBX-7282] fixed server or proxy crash while terminating database upgrade by TERM signal (Sasha)
...G...... [ZBX-7275] fixed eventlog sometimes returning garbage value (wiper)
.........T [ZBX-7269] fixed units and value type for vmware.vm.vfs.fs.size[{$URL},{HOST.HOST},{#FSNAME},pfree] item in "Template Virt VMware Guest" template (Sasha)
........S. [ZBX-7258] fixed vCenter VMs unique identifier for host names (Sasha)
..F....... [ZBX-7283] fixed latest data table layout issues when switching hosts and the "Show details" filter (Pavels)